--- a/ES2-FrontEnd/css/styles.css
+++ b/ES2-FrontEnd/css/styles.css
@@ -2,9 +2,34 @@ body{
 	background-color: black;
 }
 
-.navbar-inverse{
-  background-color: #003E7F;
-  height: 3.6em;
+nav.service-navbar {
+    height: 3em;
+    border-color: #003e7f;
+    background-color: #003e7f;
+}
+
+
+nav.service-navbar .navbar-brand {
+    padding: 2px;
+    transition: transform 0.2s linear 0s;
+	
+}
+
+nav.service-navbar .navbar-header .navbar-brand:hover{
+    transform: scale(0.8, 0.8);
+}
+
+nav.service-navbar .navbar-brand > img {
+    height: 100%;
+    padding: 2px 5px;
+}
+
+nav.service-navbar .navbar-brand.navbar-right {
+    background-color: #EDEDED;
+    border-radius: 0px 0px 6px 6px;
+    max-height:40px;
+    box-shadow: 2px 2px 2px #000;
+    /*border: 1px solid #FFF;*/
 }
 
 /*background of the left menu*/
@@ -15,8 +40,8 @@ body{
 	top: 3.6em;
 	left: -20em;
   height: 100%;
-	background: rgba(0, 62, 128, 0.7);
-	box-shadow: 0em 0em 2em black;
+	background: rgba(0, 62, 127, 0.7);
+
   z-index: 8;
 }
 
@@ -26,7 +51,7 @@ body{
   width: 4em;
   left: 0;
   top: 12em;
-	background: rgba(0, 62, 128, 0.7);   
+	background: rgba(0, 62, 127, 0.7);
 	padding-left: 1em;
 	padding-top: 1em;
 	padding-bottom: 1em;
@@ -55,8 +80,8 @@ body{
   top: 3.60em;
   right: -20em;
   height: 95%;
-  background: rgba(0, 62, 128, 0.7);
-  box-shadow: 0em 0em 2em black;
+  background: rgba(0, 62, 127, 0.7);
+
   z-index: 32;
 }
 
@@ -66,7 +91,7 @@ body{
   width: 4em;
   right: 0;
   top: 12em;
-  background: rgba(0, 62, 128, 0.7); 
+  background: rgba(0, 62, 127, 0.7);
   padding-right: 1em;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -96,8 +121,8 @@ body{
   top: 3.60em;
   right: -20em;
   height: 95%;
-  background: rgba(0, 62, 128, 0.7);
-  box-shadow: 0em 0em 2em black;
+  background: rgba(0, 62, 127, 0.7);
+
   z-index: 32;
 }
 
@@ -107,7 +132,7 @@ body{
   width: 4em;
   right: 0;
   top: 16em;
-  background: rgba(0, 62, 128, 0.7); 
+  background: rgba(0, 62, 127, 0.7);
   padding-right: 1em;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -167,7 +192,7 @@ body{
     left: 45em;
     position: absolute;
     margin: 0 auto;
-    background-color: rgba(0, 62, 128, 0.7);
+    background-color: rgba(0, 62, 127, 0.7);
     color: yellow;
     z-index: 99;
 }
