--- a/ES2-FrontEnd/css/styles.css
+++ b/ES2-FrontEnd/css/styles.css
@@ -154,16 +154,6 @@ nav.service-navbar .navbar-brand.navbar-right {
   overflow: auto;
 }
 
-
-.container{
-  width: 100%;
-  height: 100%;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-}
-
 .jumbotron{
   width: 100%;
   height: 100%;
@@ -188,8 +178,9 @@ nav.service-navbar .navbar-brand.navbar-right {
 }
 
 #coordinateOverlay{
+    top: 3.5em;
     width: 20em;
-    left: 45em;
+    left: 40%;
     position: absolute;
     margin: 0 auto;
     background-color: rgba(0, 62, 127, 0.7);
