--- a/html/service-template.css
+++ b/html/service-template.css
@@ -268,7 +268,6 @@ body {
 /*#service-container > .left-dock.open > .left-dock-toggle,*/
 #service-container .left-dock.open {
     /*left: 0;*/
-
     background: #203864; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(right, #2f5597, #203864); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(left, #2f5597, #203864); /* For Opera 11.1 to 12.0 */
@@ -283,6 +282,9 @@ body {
 #service-container .left-dock {
     /*height: 90%;*/
     /*left: -28%;*/
+
+    /* need to increase the width of toggle menu to see the bands menu in RGB combination */
+    /*width: 35%;*/
 
     max-height: 90%;
 
