--- a/html/combinator.css
+++ b/html/combinator.css
@@ -4,10 +4,6 @@
     max-width: 800px; /* Max Width of the popover */
 }
 
-#rgbcombinatordiv button {
-   font-size: 100%;
-}
-
 
 /* this is for auto complete with type WCPS band */
 .ui-autocomplete {
@@ -18,7 +14,7 @@
 	overflow-x: hidden;
 }
 
-.dropdown-menu {
+/*.dropdown-menu {
   top: 0%;
   min-width: 170px;
   width:170px;
@@ -28,12 +24,7 @@
    position:absolute;
   font-size: 90%;
   margin-left: -20px;
-  font-size: 75%;
-}
-
-.dropdown-menu>li>a {
-  margin-left: -10px;
-}  
+}*/
 
 /* RGB combination dropdown */
 #dropDownSelectedFootPrintsMenu .dropdown-menu {
@@ -44,23 +35,15 @@
 
   position: relative;
   vertical-align: middle;
-  font-size: 75%;
 
 }
 
-.dropdown-menu>li>a:focus {
-  background-color: transparent;
-}
-
-.dropdown-menu>li>a:hover {
-  opacity: 0.2;
-  background-color: transparent;
-}
 
 /*  rgb bands dropdown submenu */
 #dropDownRGBBands.dropdown-menu .scrollable-sub-menu {
   margin-left: 110px;
   width: 240px;
+  min-width: 240px;
 
   /* scroll bar vertical */
   max-height: 350px;
@@ -69,18 +52,11 @@
   z-index: 1000;
 
   position:absolute;
-  font-size: 85%;
-}
-
-/* submenu items */
-#dropDownRGBBands.dropdown-menu .scrollable-sub-menu{
-  width: 60px;
-  margin-left: 70px;
 }
 
 /* wcps bands dropdown submenu  ID and class is on same then no space between*/
 #dropDownWCPSBands.dropdown-menu .scrollable-sub-menu {
-  margin-left: 40px;
+  margin-left: 110px;
   width: 340px;
   min-width: 240px;
 
@@ -89,5 +65,4 @@
   overflow-y: scroll;
 
   z-index: 1000;
-  font-size: 85%;
 }
