--- a/html/graph.css
+++ b/html/graph.css
@@ -31,3 +31,17 @@
   fill: none;
   stroke: red;
 }
+
+#service-container .right-dock.plot-dock .panel > .panel-heading > .panel-title {
+    font-size: 1.2em;
+    text-align: center;
+    margin-bottom:-20px;
+}
+
+#service-container .right-dock.plot-dock .panel-title.panel-subtitle {
+  font-size: 0.8em;
+     text-align: center;
+     color: #ffffff;
+     font-weight: normal;
+     margin-top: 25px;
+}
